--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "@react-pdf/renderer": "^4.2.2",
+    "jspdf": "^3.0.0",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "pdf-lib": "^1.17.1",
